--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  provider: ^6.0.0
+  hive: ^2.0.3
+  hive_flutter: ^1.0.0
+  google_fonts: ^2.1.0
+  provider: ^5.0.0
   flutter:
     sdk: flutter
 
@@ -16,6 +19,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.12.2
+  hive_generator: ^1.0.1
 
   flutter_lints: ^1.0.0
 
