--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   hive_flutter: ^1.0.0
   google_fonts: ^2.1.0
   provider: ^5.0.0
+  flutter_local_notifications: ^8.2.0
+  rxdart: ^0.27.2
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
@@ -26,6 +29,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
+  assets:
+    - lib\assets\notification.png
   uses-material-design: true
   fonts:
     - family: Helvetica
